<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/study_frame"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/study_btn_1"
            android:layout_width="105dp"
            android:layout_height="115dp"
            android:layout_gravity="left"
            android:layout_marginStart="35dp"
            android:layout_marginTop="210dp"
            android:background="@drawable/shape_btn_study"
            android:drawableTop="@drawable/btn_level_1"
            android:gravity="center"
            android:paddingTop="25dp"
            android:text="@string/study_level_1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/study_btn_2"
            android:layout_width="105dp"
            android:layout_height="115dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="210dp"
            android:background="@drawable/shape_btn_study"
            android:drawableTop="@drawable/btn_level_2"
            android:gravity="center"
            android:paddingTop="25dp"
            android:text="@string/study_level_2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/study_btn_3"
            android:layout_width="105dp"
            android:layout_height="115dp"
            android:layout_gravity="right"
            android:layout_marginTop="210dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/shape_btn_study"
            android:drawableTop="@drawable/btn_level_3"
            android:gravity="center"
            android:paddingTop="25dp"
            android:text="@string/study_level_3"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@color/main_color"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:text="@string/study_title"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:lineSpacingExtra="10dp"
                android:text="@string/study_explain"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </FrameLayout>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:fillViewport="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/study_frame">

        <ListView
            android:id="@+id/study_lv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>